Complete restructure, Docker support